--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ torch==1.9.0
 matplotlib==3.3.3
 pygraphviz>=1.6
 tqdm==4.50.2
-numpy~=1.21.0
+numpy==1.23.4
 setuptools~=52.0.0
 torchviz==0.0.2
 pycddlib>=2.1.4
