--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+jupyter
+matplotlib==3.3.3
 networkx==2.5.1
+numpy==1.23.4
+pandas>=1.3.4
+setuptools>=65.5.1
+tabulate
 torch==1.13.1
 tqdm==4.50.2
-numpy==1.23.4
-setuptools>=65.5.1
-jupyter
-tabulate
-pandas>=1.3.4
