--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-jupyter
-matplotlib==3.3.3
 networkx==2.5.1
-numpy==1.23.4
-pandas>=1.3.4
-setuptools>=65.5.1
-tabulate
 torch==1.13.1
+matplotlib==3.3.3
 tqdm==4.50.2
+numpy==1.23.4
+setuptools~=52.0.0
+torchviz==0.0.2
+jupyter
+tabulate
+pandas>=1.3.4
+dash
+dash_cytoscape
